# diploma-project

./: pdr.code-workspace
document/: Diploma Draft Theory + System Design.docx  Final Version 1.docx  diploma.docx
engine/: Cargo.toml  build.py  build.rs
engine/src/: array.rs  inference.rs  input_size.rs  labels.rs  lib.rs  logger.rs  main.rs  string_array.rs
engine/src/models/: mod.rs
frontend/: package-lock.json  package.json
frontend/src/: styles.css
ml/: .gitignore  config.json  main.py  pyproject.toml
ml/config/: __init__.py  config.py  loader.py
ml/datasets/: __init__.py  classes.py  count_dataset_size.py  data.py  human_readable_classes.py  mapper.py
ml/dto/training/: __init__.py  model_metadata.py  model_name.py  step_name.py  step_result.py
ml/tools/: get_data.py
ml/tracking/: __init__.py  experiment_tracker.py
ml/training/: .model.py.swp  loop.py  matrix.py  model.py  save_model.py  step.py  test_step.py  train_step.py  val_step.py
ml/utils/: logging.py  types.py
webapi/: PlantDiseaseRecognition.WebApi.sln
webapi/PlantDiseaseRecognition.WebApi.Api/: PlantDiseaseRecognition.WebApi.Api.csproj  PlantDiseaseRecognition.WebApi.Api.http  Program.cs  appsettings.json  dog.txt
webapi/PlantDiseaseRecognition.WebApi.Engine.Contracts/: IInferenceEngine.cs  ILabelSource.cs  IMetadataSource.cs  PlantDiseaseRecognition.WebApi.Engine.Contracts.csproj
webapi/PlantDiseaseRecognition.WebApi.Engine.Rust/: .gitignore  PlantDiseaseRecognition.WebApi.Engine.Rust.csproj  RustInferenceEngine.cs  RustLabelSource.cs  RustLoggerService.cs  (+2 more)
(+39 files in other folders)
