[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
burn = { version = "0.21.0-pre.1", features = ["ndarray", "wgpu"] }
burn-store = { version = "0.21.0-pre.1", features = ["burnpack"] }
log = "0.4.29"
serde_json = "1.0.149"

[build-dependencies]
burn-onnx = { version = "0.21.0-pre.1" }
serde_json = "1.0.149"
